--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <div class="containerHero">
         <div class="containerImage">
             <!-- gambar -->
-             <img src="aset/Image.png" />
+             <img src="aset/Image-person.png" />
         </div>
         <div class="containerTextHero">
         <!-- text -->
-            <h2> class="title"> blabla  </h2>
+            <h2> class="title"> Nabilah Putri  </h2>
             <h2> Hi, Mate, I am  </h2>
             <p class="subtitle"> Hi, I made this website thru simetri </p>
         </div>
     </div>
 <!-- about us -->
     <div class="flex py-16 px-[133px] flex-row gap-24" >
-        <img src="aset/Image.png" class="w-96 h-96">
+        <img src="aset/Image-person.png" class="w-96 h-96">
         <div>
             <h2 class="text-5xl font-bold mb-6">About me</h2>
             <div class="flex flex-col gap-4">
@@ -53,6 +53,16 @@
         <div>
             hsgs
         </div>
-    </section>
+    </section class="flex flex-col py-16 px-[120 px] justify-center items-center">
+    <h2 class="font-bold text-5xl text-center"> My Latest Work </h2>
+    <div class="flex flex-col md:flex-row border border-pink-700 w-full">
+        <div>
+            <img src="./assets/Image-1.png" class="w-full"/>
+            <p class="font-bold text-gray-800 text-2xl my-2">Red Eye </p>
+                
+        <div>2</div>
+        <div>3</div>
+    </div>
+
 </body>
 </html>
