--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="containerTextHero">
         <!-- text -->
-            <h2> class="title"> Nabilah Putri  </h2>
+            <h2 class="title"> Nabilah Putri  </h2>
             <h2> Hi, Mate, I am  </h2>
             <p class="subtitle"> Hi, I made this website thru simetri </p>
         </div>
