--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
       <div class="flex flex-col md:flex-row gap-2 mx-auto w-full">
         <button class="bg-blue-700 px-4 w-full md:w-1/2 py-2 rounded-xl">
           <div class="flex flex-row gap-x-2 justify-center items-center">
-            <img src="./assets/ic-instagram.png" class="w-[16px] h-[16px]" />
+            <img src="./assets/Image-1.png" class="w-[16px] h-[16px]" />
             <p class="text-white">Instagram</p>
           </div>
         </button>
         <button class="bg-blue-700 px-4 w-full md:w-1/2 py-2 rounded-xl">
           <div class="flex flex-row gap-x-2 justify-center items-center">
-            <img src="./assets/ic-mail.png" class="w-[18px] h-[16px]" />
+            <img src="./assets/Image-2.png" class="w-[18px] h-[16px]" />
             <p class="text-white">Email</p>
           </div>
         </button>
@@ -196,7 +196,7 @@
           class="flex flex-col md:flex-row md:justify-between md:items-center"
         >
           <div class="flex flex-row gap-4">
-            <img src="./assets/ic-instagram.png" class="w-[16px] h-[16px]" />
+            <img src="./assets/image.png" class="w-[16px] h-[16px]" />
             <img src="./assets/ic-mail.png" class="w-[18px] h-[16px]" />
           </div>
           <p class="text-white text-xs mt-4 md:mt-0">
