--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
           class="flex flex-col gap-y-4 md:flex-row md:gap-x-8 md:gap-8 lg:gap-16"
         >
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image.png" />
+            <img src="/aset/Image-1.png" />
             <p class="font-bold text-gray-700 md:text-[24px]">Free Bird</p>
             <p class="md:text-[20px]">Cihuy</p>
           </div>
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-1.png" />
+            <img src="./aset/Image-1.png" />
             <p class="font-bold text-gray-700 md:text-[24px]">Purple Haze</p>
             <p class="md:text-[20px]">Jimmy Hendrix</p>
           </div>
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-2.png" />
+            <img src="./aset/Image-2.png" />
             <p class="font-bold text-gray-700 md:text-[24px]">You Really Got</p>
             <p class="md:text-[20px]">The Kinks</p>
           </div>
@@ -80,17 +80,17 @@
           class="flex flex-col gap-y-4 md:gap-x-8 md:flex-row md:gap-8 lg:gap-16"
         >
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-3.png" />
+            <img src="./aset/Image-1.png" />
             <p class="font-bold text-gray-700 md:text-[24px]">Free Bird</p>
             <p class="md:text-[20px]">Cihuy</p>
           </div>
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-4.png" />
+            <img src="./aset/Image-2.png" />
             <p class="font-bold text-gray-700 md:text-[24px]">Purple Haze</p>
             <p class="md:text-[20px]">Jimmy Hendrix</p>
           </div>
           <div class="flex flex-col w-full gap-y-2 md:w-1/3">
-            <img src="./assets/Image-5.png" />
+            <img src="/aset/Image.png" />
             <p class="font-bold text-gray-700 md:text-[24px]">You Really Got</p>
             <p class="md:text-[20px]">The Kinks</p>
           </div>
