--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="flex flex-col">
             <label for="fname">Your Name:</label>
             <input
-              placeholder="Nadia Lovely"
+              placeholder="nabilah"
               class="border border-gray-400 p-2 rounded-md"
               type="text"
               id="fname"
@@ -125,7 +125,7 @@
           <div class="flex flex-col">
             <label for="email">Email:</label>
             <input
-              placeholder="nadialovely@gmail.com"
+              placeholder="nabilah.putri.at@gmail.com"
               class="border border-gray-400 p-2 rounded-md"
               type="email"
               id="email"
