--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel='stylesheet'type='text/html'>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
@@ -33,6 +35,8 @@
         </div>
     </div>
 <!-- about us -->
+ <section
+ data-aos="flip-up">
     <div class="flex py-16 px-[133px] flex-row gap-24" >
         <img src="aset/Image-person.png" class="w-96 h-96">
         <div>
@@ -47,8 +51,10 @@
             </div>
         </div>
     </div>
+</section>
 
     <section
+    data-aos="flip-left"
       class="flex flex-col pt-16 px-6 lg:px-16 lg:px-[133px] justify-center items-center"
     >
       <h2 class="text-3xl font-bold mb-4 md:mb-12 md:text-5xl">
@@ -99,6 +105,7 @@
     </section>
 
     <section
+    data-aos="fade-up"
       class="w-full pt-16 px-6 lg:px-[133px] lg:px-16 flex flex-col md:flex-row md:justify-between md:items-start"
     >
       <div class="md:w-1/2">
@@ -182,7 +189,7 @@
         <div
           class="flex flex-col md:flex-row md:justify-between md:items-center"
         >
-          <h2 class="text-white text-2xl font-bold">Nadia Lovely</h2>
+          <h2 class="text-white text-2xl font-bold">nabilah</h2>
           <div
             class="text-white flex flex-col md:flex-row md:justify-around gap-4 mt-4 md:mt-0"
           >
@@ -208,4 +215,7 @@
     </div>
 
 </body>
+<script>
+    AOS.init();
+  </script>
 </html>
